Wed Oct  1 02:08:47 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_common.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.h:
        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.h:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.h:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Changes necessary for NodeApplicationManager-NodeApplication test to pass.
        
Tue Sep 30 14:52:09 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Changes necessary to pass NodeManager-NodeApplicationManager test.

Tue Sep 30 14:32:34 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/DAnCE_Loader.h:
        * DAnCE/Deployment/Module_Main.h:
        * DAnCE/Logger/Log_Macros.h:
        * DAnCE/Logger/Logger_Service.h:
        * DAnCE/Logger/Logger_Service.cpp:
        * DAnCE/NodeManager/NodeManager.mpc:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Exec.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:
        * DAnCE/Starter/Starter.h:
        * DAnCE/Starter/Starter.cpp:

          Fixed logging infrastructure, enableed NodeManager binary and ensured
          its ability to start up.

        * ciao/Logger/Log_Macros.h:

          Fixed tracing facility.

Mon Sep 29 17:26:48 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/Deployment/Deployment_Connection.idl:
        * DAnCE/Deployment/Deployment_common.h:
        * DAnCE/NodeManager/NodeManager.mpc:
        * DAnCE/NodeManager/NodeManager_Impl.h:
        * DAnCE/NodeManager/NodeManager_Impl.cpp: