@@ -4,7 +4,6 @@
 #include "ace/Log_Msg.h"
 #include "xercesc/util/XMLUniDefs.hpp"
 #include "xercesc/dom/DOM.hpp"
-#include "xercesc/parsers/XercesDOMParser.hpp"
 #include "XML_Error_Handler.h"
 #include "XML_Schema_Resolver.h"
 #include "xercesc/framework/LocalFileFormatTarget.hpp"
@@ -135,53 +134,53 @@ namespace CIAO
 
       try
         {
-          auto_ptr<XercesDOMParser> parser 
-            (new xercesc::XercesDOMParser ());
+          if (this->parser_.get () == 0)
+            this->parser_.reset ((new xercesc::XercesDOMParser ()));
           
           // Perform Namespace processing.
-          parser->setDoNamespaces (true);
+          this->parser_->setDoNamespaces (true);
           
           // Discard comment nodes in the document
-          parser->setCreateCommentNodes (true);
+          this->parser_->setCreateCommentNodes (false);
 
           // Disable datatype normalization. The XML 1.0 attribute value
           // normalization always occurs though.
-          // parser->setFeature (XMLUni::fgDOMDatatypeNormalization, true);
+          // this->parser_->setFeature (XMLUni::fgDOMDatatypeNormalization, true);
 
           // Do not create EntityReference nodes in the DOM tree. No
           // EntityReference nodes will be created, only the nodes
           // corresponding to their fully expanded sustitution text will be
           // created.
-          parser->setCreateEntityReferenceNodes (false);
+          this->parser_->setCreateEntityReferenceNodes (false);
           
           // Perform Validation
-          parser->setValidationScheme (xercesc::AbstractDOMParser::Val_Always);
+          this->parser_->setValidationScheme (xercesc::AbstractDOMParser::Val_Always);
 
           // Do not include ignorable whitespace in the DOM tree.
-          parser->setIncludeIgnorableWhitespace (false);
+          this->parser_->setIncludeIgnorableWhitespace (false);
 
           // Enable the parser's schema support.
-          parser->setDoSchema (true);
+          this->parser_->setDoSchema (true);
 
           // Enable full schema constraint checking, including checking which
           // may be time-consuming or memory intensive. Currently, particle
           // unique attribution constraint checking and particle derivation
           // restriction checking are controlled by this option.
-          parser->setValidationSchemaFullChecking (true);
+          this->parser_->setValidationSchemaFullChecking (true);
 
           // The parser will treat validation error as fatal and will exit.
-          parser->setValidationConstraintFatal (true);
+          this->parser_->setValidationConstraintFatal (true);
 
-          parser->setErrorHandler (&e_handler_);
+          this->parser_->setErrorHandler (&e_handler_);
 
-          parser->setEntityResolver (&resolver_);
+          this->parser_->setEntityResolver (&resolver_);
 
-          parser->parse (url);
+          this->parser_->parse (url);
           
           if (e_handler_.getErrors ())
             return 0;
           
-          return parser->getDocument ();
+          return this->parser_->getDocument ();
         }
       catch (const DOMException& e)
         {
