@@ -1,3 +1,12 @@
+Wed Oct  1 20:27:33 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * tools/Config_Handlers/XML_File_Intf.cpp:
+        * tools/XML/XML_Helper.h:
+        * tools/XML/XML_Helper.tpp:
+
+          Fixed some incompatibilities with Xerces 3.0, and improved logging in the
+          XML_File_Intf.
+        
 Wed Oct  1 02:08:47 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/Deployment/Deployment_common.h:
@@ -10,7 +19,7 @@ Wed Oct  1 02:08:47 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
         * DAnCE/NodeManager/Node_Manager_Module.cpp:
 
           Changes necessary for NodeApplicationManager-NodeApplication test to pass.
-        
+
 Tue Sep 30 14:52:09 UTC 2008  William R. Otte  <wotte@dre.vanderbilt.edu>
 
         * DAnCE/NodeManager/Node_Manager_Module.h:
